fix(grid): fix responsive breakpoints and gutter wrapping
CSS used max-width (broken) instead of min-width (mobile-first),
had a duplicate sm query, and was missing xs. Row gutter used
index-based padding causing indent on wrapped columns; switch to
negative-margin approach with equal padding on all cols.

--- a/components/grid/style/_index.scss
+++ b/components/grid/style/_index.scss
@@ -70,23 +70,21 @@
   box-sizing: border-box;
   display: block;
   @include grid();
+  @include grid('-xs');
 
-  @media screen and (max-width: $size-sm) {
+  @media screen and (min-width: $size-sm) {
     @include grid('-sm');
   }
-  @media screen and (max-width: $size-sm) {
-    @include grid('-sm');
-  }
-  @media screen and (max-width: $size-md) {
+  @media screen and (min-width: $size-md) {
     @include grid('-md');
   }
-  @media screen and (max-width: $size-lg) {
+  @media screen and (min-width: $size-lg) {
     @include grid('-lg');
   }
-  @media screen and (max-width: $size-xl) {
+  @media screen and (min-width: $size-xl) {
     @include grid('-xl');
   }
-  @media screen and (max-width: $size-xxl) {
+  @media screen and (min-width: $size-xxl) {
     @include grid('-xxl');
   }
 }
